--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ h6 {
     height: 100%;
     left: 0;
     top: 0;
-    background: url(../img/top-header.jpg) left top repeat;
+    background: url(../img/Cover.jpg) left top repeat;
     background-size: cover;
     filter: blur(8px);
     -webkit-filter: blur(8px);
@@ -1143,3 +1143,4 @@ body.mobile-nav-active #mobile-nav-toggle {
 .footer .copyright p:last-child {
     margin: 0;
 }
+
